--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": "20.x"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
   }
